# webview-py-editor

./: README.md  pyproject.toml
src/: main.py  menu_sample.py
src/html/: index.html
src/html/css/: make_css.py
